# psc

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
configuration/: configure_firmware.sh  configure_usb.sh  install.sh  install_crazyflie.sh  install_mesh_generator.sh  install_ros.sh
launch/: agent.launch  run_real.launch  run_simulated.launch
launch/perspectives/: default.perspective  rviz_configuration.rviz
scripts/: astar_test.py  coordinator_test.py  generate_launchfile.py  get_crazyflie_names.py  integration_test.py  main.py  multiple_publisher_test.py  optimize_mesh.py  publisher_test.py  segment_test.py
scripts/templates_launch/: body_1.xml  header.xml  launch_drone_body.xml  launch_drone_header.xml  tail.xml
src/agent/: Crazyflie.py  CrazyflieServices.py  CrazyflieStateMachine.py  Swarm.py
src/decision_making/: AStarPlanner.py  CGALMesh.py  Coordinator.py  DecisionMaking.py  Delta.py  DeltaNode.py  Event.py  Foo.py  Intersection.py  MeshNode.py  Node.py  ObstacleRegion.py  UniformMesh.py  mesh.py
src/decision_making/trajectory/: Path.py  Polynomial.py  Polynomial4D.py  TimedPath.py  Trajectory.py  TrajectoryOutput.py
src/perception/: Perception.py
src/perception/vision/: Vision.py
src/representations/: Constants.py  Point.py  Segment.py  StablePose.py
src/representations/obstacles/: Box.py  Cylinder.py  Obstacle.py  ObstacleCollection.py
src/scripts/: get_crazyflie_names.py  integration_test.py
src/tools/: SwarmController.py
src/tools/connection_handler/: CMakeLists.txt  plugin.xml
src/tools/swarm_controller/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/tools/swarm_controller/launch/: swarm_controller.launch
src/tools/swarm_controller/scripts/: swarm_controller  swarm_controller.py
src/tools/swarm_controller/src/: SwarmController.py  SwarmController.ui
src/tools/swarm_controller/src/swarm_controller/: SwarmController.ui
src/tools/telemetry/: VisualizationPublisher.py
src/tools/visualization/: VisualizationPublisher.py
(+9 files in other folders)
