<package>
  <name>psc</name>
  <version>1.0.0</version>
  <description>
  This package provides utilities to launch a grup of drones.
  </description>
  <maintainer email="alysiogl@gmail.com">Aloysio</maintainer>
  <maintainer email="asilvaigor@gmail.com">Igor</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>crazyflie_gazebo</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>crazyflie_gazebo</exec_depend>
</package>
