<package>
  <name>psc</name>
  <version>1.0.0</version>
  <description>
  This package provides utilities to launch a grup of drones.
  </description>
  <maintainer email="alysiogl@gmail.com">Aloysio</maintainer>
  <maintainer email="asilvaigor@gmail.com">Igor</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>crazyflie_gazebo</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>crazyflie_gazebo</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/src/tools/swarm_controller/plugin.xml"/>
  </export>
</package>
